--- a/projeto_pev.ipynb
+++ b/projeto_pev.ipynb
@@ -3,8 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "toc_visible": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -29,29 +28,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "1fsgPohsbsAd",
-        "outputId": "97605fc4-4134-4390-c012-883c0931b6eb"
+        "outputId": "9ca4f31a-9024-4727-c70c-cfc7ed8a8f75"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2025-03-05 14:38:57--  http://archive.apache.org/dist/spark/spark-3.5.5/spark-3.5.5-bin-hadoop3.tgz\n",
+            "--2025-03-05 16:42:27--  http://archive.apache.org/dist/spark/spark-3.5.5/spark-3.5.5-bin-hadoop3.tgz\n",
             "Resolving archive.apache.org (archive.apache.org)... 65.108.204.189, 2a01:4f9:1a:a084::2\n",
             "Connecting to archive.apache.org (archive.apache.org)|65.108.204.189|:80... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 400724056 (382M) [application/x-gzip]\n",
             "Saving to: ‘spark-3.5.5-bin-hadoop3.tgz’\n",
             "\n",
-            "spark-3.5.5-bin-had 100%[===================>] 382.16M   211KB/s    in 40m 33s \n",
+            "spark-3.5.5-bin-had 100%[===================>] 382.16M   356KB/s    in 33m 36s \n",
             "\n",
-            "2025-03-05 15:19:30 (161 KB/s) - ‘spark-3.5.5-bin-hadoop3.tgz’ saved [400724056/400724056]\n",
+            "2025-03-05 17:16:04 (194 KB/s) - ‘spark-3.5.5-bin-hadoop3.tgz’ saved [400724056/400724056]\n",
             "\n",
             "Python 3.11.11\n"
           ]
@@ -76,7 +75,7 @@
       "metadata": {
         "id": "Mbq0Co2LkeFC"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -102,9 +101,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "L9Oy5n2xf2VP",
-        "outputId": "c04a2042-9f9e-4a33-a05f-c75a723eff32"
+        "outputId": "94a7f660-3e5b-40d8-e3c5-fcb927c68784"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -142,10 +141,10 @@
             "Requirement already satisfied: soupsieve>1.2 in /usr/local/lib/python3.11/dist-packages (from beautifulsoup4->bs4) (2.6)\n",
             "Requirement already satisfied: h11<1,>=0.9.0 in /usr/local/lib/python3.11/dist-packages (from wsproto>=0.14->trio-websocket~=0.9->selenium) (0.14.0)\n",
             "Downloading selenium-4.29.0-py3-none-any.whl (9.5 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m9.5/9.5 MB\u001b[0m \u001b[31m38.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m9.5/9.5 MB\u001b[0m \u001b[31m32.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading bs4-0.0.2-py2.py3-none-any.whl (1.2 kB)\n",
             "Downloading trio-0.29.0-py3-none-any.whl (492 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m492.9/492.9 kB\u001b[0m \u001b[31m21.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m492.9/492.9 kB\u001b[0m \u001b[31m26.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading trio_websocket-0.12.2-py3-none-any.whl (21 kB)\n",
             "Downloading outcome-1.3.0.post0-py2.py3-none-any.whl (10 kB)\n",
             "Downloading wsproto-1.2.0-py3-none-any.whl (24 kB)\n",
@@ -172,6 +171,10 @@
         "from bs4 import BeautifulSoup # Parseador de HTML\n",
         "from selenium import webdriver\n",
         "from selenium.webdriver.common.by import By\n",
+        "from datetime import datetime\n",
+        "\n",
+        "now = datetime.now()\n",
+        "extract_timestamp = f\"{now.year}-{now.strftime('%m')}-{now.strftime('%d')}\"\n",
         "\n",
         "URL = \"https://www.worldometers.info/world-population/population-by-country/\"\n",
         "XPATH = '//*[@id=\"example2\"]'\n",
@@ -189,22 +192,22 @@
         "\n",
         "df_needed_columns = df[['Country (or dependency)', 'Population  (2024)', 'Yearly  Change']]\n",
         "\n",
-        "df_needed_columns.to_csv(\"populacao_paises.csv\", index=False)"
+        "df_needed_columns.to_csv(f\"{extract_timestamp}_populacao_paises.csv\", index=False)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "PESBdRgngRCX",
-        "outputId": "6922f8b7-4e6f-4779-fd7d-d9414a9a4adc"
+        "outputId": "630b8687-6bb3-444f-f1a1-84d8d3febedb"
       },
-      "execution_count": 4,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-4-b215a6f11102>:19: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
+            "<ipython-input-11-6246b8958450>:23: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
             "  df = pd.read_html(str(table))[0]\n"
           ]
         }
@@ -229,7 +232,7 @@
       "metadata": {
         "id": "PnbBV_FkjYoA"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -237,9 +240,13 @@
       "source": [
         "from pyspark.sql.functions import col, split, cast, pow\n",
         "from pyspark.sql.types import DoubleType\n",
+        "from datetime import datetime\n",
+        "\n",
+        "now = datetime.now()\n",
+        "process_timestamp = f\"{now.year}-{now.strftime('%m')}-{now.strftime('%d')}\"\n",
         "\n",
         "df = session.read.csv(\n",
-        "\t'populacao_paises.csv',\n",
+        "\tf'{extract_timestamp}_populacao_paises.csv',\n",
         "\tsep=',',\n",
         "\theader=True,\n",
         "\tinferSchema=True\n",
@@ -272,16 +279,16 @@
         "pop_2030 = pop_filter.withColumn('population_2030', col('population_2024') * pow(1 + col('yearly_change'), 6))\n",
         "pop_2030.show(5)\n",
         "\n",
-        "pop_2030.write.mode('error').parquet('populacao_paises_processado.parquet')"
+        "pop_2030.write.mode('overwrite').parquet(f'{process_timestamp}_populacao_paises_processado.parquet')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "FcWDQhkVjoIw",
-        "outputId": "53698ecb-7612-4920-d093-1d1e01dbe12e"
+        "outputId": "6343af30-8818-4413-e2b2-83a0b534b7fd"
       },
-      "execution_count": 6,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
